--- a/.gitignore
+++ b/.gitignore
@@ -25,6 +25,19 @@ ipch
 *.VC.db
 *.VC.VC.opendb
 
+.vs/
+.idea/
+bin/
+bin-int/
+
+# Files
+*.user
+**.sln
+**.vcxproj
+**.vcxproj.filters
+**.vcxproj.user
+
+
 ## Getting files created in JSON/Schemas/Catalog/ from a VS2022 update
 JSON/
 
